Fixed alignment issue in usage log (#1056)

--- a/src/hoc/calendar/style.css
+++ b/src/hoc/calendar/style.css
@@ -1,10 +1,10 @@
 .react-calendar-timeline {
-    border: 1px solid #BBBBBB !important;
     border-radius: 4px;
 }
 
 .react-calendar-timeline .rct-dateHeader{
     background-color: #1E2123 !important;
+    border-width: 1px;
 }
 
 .rct-day-6, .rct-day-0, .rct-day-0, .rct-day-5, .rct-day-4, .rct-day-3, .rct-day-2, .rct-day-1 {
@@ -18,4 +18,22 @@
 
 .react-calendar-timeline .rct-header-root{
     border:none !important;
+    border-left: 1px solid #BBBBBB !important;
+    background-color: transparent !important;
+}
+
+.react-calendar-timeline .rct-dateHeader-primary {
+    border-width: 1px !important;
+    border-right: none !important;
+}
+
+.rct-outer{
+    border-left: 1px solid #BBBBBB !important;
+    border-right: 1px solid #BBBBBB !important;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+}
+
+.react-calendar-timeline .rct-calendar-header{
+    border-top: none !important;
 }
